--- a/style.css
+++ b/style.css
@@ -10,37 +10,45 @@ body{
 header{
     max-width: 1100px;
     margin: auto ;
-    margin-top: 100px;
-    display: flex;
-    background-color:rgba(10, 15, 20,0.5);
+    padding-top: 50px;
+    display:flex;
 
 }
+#baslık{
+    background-color:rgba(90, 175, 11, 0.5);
 
-header h1{
+}
+.head1{
     color: white;
-    float: left;
 
 }
-header ul{
+.head2{
     margin: auto;
+    margin-right: 0px;
+    
 }
 
-header li{
+header div ul li{
     display: inline;
-    padding: 0px 50px;
+    padding: 0px 40px;
+    float: right;
+    clear: both;
+  
 }
 header a{
     text-decoration: none;
     color: white;
     list-style-type: none;
     font-size: 22px;
+    
   
 }
 header a:hover{
     border: 2px solid white;
     background-color:rgba(47, 73, 99, 0.5);
     border-radius: 10px;
-    border-collapse: collapse;
+    padding: 0px 3px;
+    transition: 0.5s;
     
 }
 main{
