--- a/style.css
+++ b/style.css
@@ -14,58 +14,60 @@ body{
 .ana{
     margin: auto;
     max-width: 1100px;
-    padding-top: 50px;
+    padding-top: 40px;
     display:flex;
 }
 
 
 
 .head1{
-    color:rgb(9, 40, 65);
-    font-size: 25px;
+    color:#06505a;
+    font-size: 40px;
     font-family: "Righteous";
     letter-spacing: 5px;
-    border-bottom:5px double rgb(9, 40, 65);
+    border-bottom:5px double #ffffff;
+    
 }
 span{
-    color:rgb(49, 2, 2);
+    color:#a50606;
 
 }
 .head1 h1{
     padding-left: 30px;
+    font-family: "Orbitron";
 }
 .head2{
     margin: auto;
     margin-right: -70px;
-    background-color: rgba(209, 144, 24, 0.2);
     padding: 5px 0px;
- 
-    
-    
+    background-color: rgba(255, 255, 255, 0.5);  
 }
 
 .head2 li{
     display: inline;
     padding: 0px 30px;
+     
   
   
 }
 .head2 a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color:#a50606;
     list-style-type: none;
     font-size: 22px;
     font-family: "Righteous";
-    font-weight: bolder;
+    font-weight:bolder;
+    border-bottom: 1px double white;
     
   
 }
 .head2 a:hover{
-    border: 2px solid white;
-    background-color:rgb(9, 40, 65);
-    border-radius: 10px;
+    border: 2px solid rgb(0, 0, 0);
+    background-color:rgb(0, 0, 0);
+    border-radius: 15px 15px 5px 5px;
     padding: 0px 5px;
     transition: 0.5s;
+    color: rgb(255, 255, 255);
     
 }
 
@@ -80,13 +82,14 @@ span{
         text-align: center;
 
     }
+    .head2{
+        background-color: rgba(255, 255, 255, 0.5);
+    }
     .head2 li{
         font-size: 20px;
         padding: 10px 10px;
+        
     }
-    main{
-        margin-top: 100px;
-    }
-
+   
     
 }
